# RplaceTimelapseGenerators

./: .gitmodules  NativeTimelapseGenerator.Console.sln  README.md
DotnetTimelapseGenerator/: .gitignore  CommitInfo.cs  DateGenerator.cs  Program.cs  TimelapseGenerator.cs  TimelapseGenerator.csproj  TimelapseGenerator.sln
NativeTimelapseGenerator/: .clangd  .gitignore  CMakeLists.txt  README.md  asan.supp  canvas-downloader.c  canvas-downloader.h  canvas-saver.c  canvas-saver.h  canvas_1_commit_hashes.txt  canvas_downloader.c  canvas_downloader.h  canvas_saver.c  canvas_saver.h  commit_hashes.txt  console.c  console.h  database.c  database.h  download_hashes.sh  example_commit_hashes.txt  image-generator.c  image-generator.h  image_generator.c  image_generator.h  main-thread.c  main-thread.h  main.c  main_thread.c  main_thread.h  memory_utils.c  memory_utils.h  repo_commit_hashes.txt  run.sh  schema.sql  ubsan.supp  worker-structs.h  worker_enums.h  worker_structs.h
NativeTimelapseGenerator.Console/: ControlWindow.cs  Extensions.cs  NativeTimelapseGenerator.Console.csproj  NativeTimelapseGenerator.Console.sln  StaticMethods.cs  WorkerInfo.cs
NativeTimelapseGenerator.Console/Delegates/: CallbackDelegate.cs  StartCallbackDelegate.cs  WorkersCountCallbackDelegate.cs
NativeTimelapseGenerator.Console/Structs/: CanvasInfo.cs  Config.cs
NativeTimelapseGenerator.ConsoleTest/: NativeTimelapseGenerator.ConsoleTest.csproj  Program.cs
NativeTimelapseGenerator/web/: bun.lockb  index.html  package.json  tsconfig.json
NativeTimelapseGenerator/web/@types/: nanobuf.d.ts
NativeTimelapseGenerator/web/src/: index.css  index.ts
NativeTimelapseGenerator/web/src/types/: nanobuf.d.ts
NativeTimelapseGenerator/web/src/views/: backups-view.ts  control-panel.ts  logs-list-view.ts  main-control-view.ts  saves-view.ts  worker-manager-view.ts
NativeTimelapseGenerator/workers/: download_worker.c  download_worker.h  render_worker.c  render_worker.h  save_worker.c  save_worker.h  worker_enums.h  worker_structs.h
NodeBackupGenerator/: .gitignore  README.md  bun.lockb  downloader.js  generate.ts  index.js  package-lock.json  package.json
